tests/errors/type-set.kawa
var point p;

class point {
  attribute int x;
  attribute int y;

  method void constructor (int x, int y) {
    this.x = x;
    this.y = y;
  }

}

main {
  p = new point(1, 1);
  p.x = 2;
  p.x = true; // erreur de type : p.x est de type <int>
  return 0;
}
